Fixed scrollTop button arrow placement on ios safari. Fixed wallpaper download button positioning on ios safari.

--- a/styles/components/cards.scss
+++ b/styles/components/cards.scss
@@ -74,6 +74,7 @@
           }
         }
         .download-btn {
+          position: relative;
           border-bottom: 2px solid #1f1e1e;
           padding: 15px;
           text-align: center;
@@ -88,6 +89,9 @@
           }
           a {
             position: absolute;
+            width: 100%;
+            left: 0;
+            top: 10px;
             color: inherit;
             @media #{$ie11} {
               top: 60%;
